# hackwestern

./: .gitignore  CMakeLists.txt  analyzer.py  app.env  app.py  build.sh  check_env.py  check_models.py  emotion_log.txt  find_smartspectra.cmake  health_api.py  health_tracker.py  help.py  interview_analyzer.py  requirements.txt  server.py  setup_smartspectra.sh  smartspectra_requirements.txt  test.txt  test_interview_analyzer.py  test_tracker.py  test_tts.py
conversation_logs/: conversation_log.txt
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.css.orig  App.js
frontend/src/components/: AudioVisualizer.js  EmotionOverlay.js  EmotionStats.js  EmotionStatsFixed.js  InterviewIntro.js  SimpleVoiceChat.js  VoiceChat.js
smartspectra_wrapper/: CMakeLists.txt  __init__.py
smartspectra_wrapper/src/: tracker_wrapper.cpp
submissions/: user_code.txt
uploads/: input.webm
venv_new/: pyvenv.cfg
venv_pt/: pyvenv.cfg
